syntax = "proto3";

package dev.enola.core;

option java_string_check_utf8 = true;
option java_package = "dev.enola.core.proto";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

enum Status {
  STATUS_UNSPECIFIED     = 0;
  STATUS_OK              = 200;
  STATUS_OK_BUT_DEGRADED = 300;
  STATUS_NOK_DEPENDENCY  = 502;
  STATUS_NOK_ITSELF      = 503;
}

message URI {
  oneof oneof {
    string text  = 1;
    Parts struct = 2;
  }
  message Parts {
    string scheme = 1;
    string authority = 2;
    repeated NameValue query = 3;
  }
  message NameValue {
    string name = 1;
    string value = 2;
  }
}

message GetRequest {
  URI uri = 1;

  // google.protobuf.Timestamp ts = 2;
  // google.protobuf.Timestamp start = 2;
  // google.protobuf.Timestamp end = 3;
  // google.protobuf.Duration granularity = 4;
}
message GetResponse {
  URI uri = 1;
  google.protobuf.Timestamp ts = 2;
  Status status = 3;
  repeated string depends_on = 4;
  string is_owned_by = 5;
  google.protobuf.Any proto = 6;
}

service EnolaService {
  rpc Get(GetRequest) returns (GetResponse) {}
}
